# splash_attention

./: .gitignore  LICENSE  MANIFEST.in  README.md  benchmark.py  pyproject.toml  requirements.txt  sparse_attention.py  splash_attention.py
src/splash_attention/: __init__.py  sparse_attention.py  splash_attention.py
src/splash_attention/configs/: bwd_16_12_1024_64.json  bwd_16_12_1024_64_bf16.json  bwd_16_12_1024_64_fp32.json  bwd_16_32_1024_64.json  bwd_16_32_1024_64_bf16.json  bwd_16_32_1024_64_fp32.json  bwd_2_32_2048_64.json  bwd_2_32_2048_64_bf16.json  bwd_2_32_2048_64_fp32.json  bwd_2_32_4096_64.json  bwd_2_32_4096_64_bf16.json  bwd_2_32_4096_64_fp32.json  bwd_2_32_8192_64_bf16.json  bwd_2_32_8192_64_fp32.json  bwd_32_12_1024_64.json  bwd_32_12_1024_64_bf16.json  bwd_32_12_1024_64_fp32.json  bwd_32_32_1024_64.json  bwd_32_32_1024_64_bf16.json  bwd_32_32_1024_64_fp32.json  bwd_48_12_1024_64.json  bwd_48_12_1024_64_bf16.json  bwd_48_12_1024_64_fp32.json  bwd_48_32_1024_64.json  bwd_48_32_1024_64_bf16.json  bwd_48_32_1024_64_fp32.json  fwd_16_12_1024_64.json  fwd_16_12_1024_64_bf16.json  fwd_16_12_1024_64_fp32.json  fwd_16_32_1024_64.json  fwd_16_32_1024_64_bf16.json  fwd_16_32_1024_64_fp32.json  fwd_2_32_2048_64.json  fwd_2_32_2048_64_bf16.json  fwd_2_32_2048_64_fp32.json  fwd_2_32_4096_64.json  fwd_2_32_4096_64_bf16.json  fwd_2_32_4096_64_fp32.json  fwd_32_12_1024_64.json  fwd_32_12_1024_64_bf16.json  (+10 more)
tests/: test.py  test_precision.py
