[project]
name = "splash_attention"
version = "0.3.2"
description = "PyTorch Helion kernel for sparse attention"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name="hpan", email="hpan@tuebingen.mpg.de"}]
dependencies = [
    "helion>=0.3.3",
    "packaging",
    "torch>=2.9",
]

[project.urls]
Homepage = "https://github.com/hrpan/splash_attention"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
splash_attention = ["configs/*.json"]


[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = "test_*.py"
markers = [
    "fwd: tests related to forward-pass behavior",
    "bwd: tests related to backward-pass behavior",
]
